25-eks-microservices/kube-manifests/01-mysql-externalname-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: usermgmtdb.c2fammqas0yq.us-east-1.rds.amazonaws.com
